--- a/2.PROJECT.html
+++ b/2.PROJECT.html
@@ -40,24 +40,33 @@
   <body>
     <h1><img src="knock.jpg" width="50" height="50" >배움의 문을 여는,똑똑한 사람 박정찬 입니다.<img src="door2.jpg" width="50" height="50"></h1>
     <div id="menuBar">
-      <h2><a href="0.PROFILE.html">Profile</a></h2>
+      <h2><a href="index.html">Profile</a></h2>
       <h2><a href="1.LEARNING.html">Learning</a></h2>
       <h2><a href="2.PROJECT.html">Project</a></h2>
     </div>
     <div class="paragraph2">
       <h2>도시 표지판을 학습하는 머신러닝 프로그램</h2><br>
-      <div><img src="" alt=""></div>
-      <p></p>
+      <div><img src="traffic.png" width="600" height="600" alt="이미지를 불러올 수 없습니다."></div>
+      <div><strong>참여자:</strong> 박정찬</div>
+      <div><strong>가용 언어:</strong> Python</div>
+      <div><strong>기능:</strong> CNN방식으로 표지판 인식을 하는 머신을 구축함으로써 자율주행자동차가 장애물 인식뿐만 아니라 표지판을 인식하게 됨으로써 더욱더 사고 위험을 줄일 수 있도록 구축했다.</div>
+      <div><a href="https://github.com/park-jeongchan/traffic" target="_blank"><strong>GITLINK</strong></a></div>
     </div>
     <div class="paragraph2">
       <h2>회원관리 메뉴 프로그램</h2><br>
-      <div><img src="" alt=""></div>
-      <p></p>
+      <div><img src="management.png" width="600" height="600" alt="이미지를 불러올 수 없습니다."></div>
+      <div><strong>참여자:</strong> 박정찬</div>
+      <div><strong>가용 언어:</strong> JAVA</div>
+      <div><strong>기능:</strong> 회원의 로그인 메뉴관리 통합시스템 구축하였으며 그 외에 다양한 기능들을 구현했다.</div>
+      <div><a href="https://github.com/park-jeongchan/management" target="_blank"><strong>GITLINK</strong></a></div>
     </div>
     <div class="paragraph2">
       <h2>WEB 포트폴리오 만들기</h2><br>
-      <div><img src="" alt=""></div>
-      <p></p>
+      <div><img src="jeongchan.png" width="400" height="600" alt="이미지를 불러올 수 없습니다."></div>
+      <div><strong>참여자:</strong> 박정찬</div>
+      <div><strong>가용 언어:</strong> HTML+CSS</div>
+      <div><strong>기능:</strong> 현재 보고 있는 웹사이트이며 html과 css를 사용해서 자기소개서를 web으로 만들고 웹 호스팅까지 진행해 봤다. 자바스크립트 등 더 배우게 되면 더 업그레이드 할 예정이다.</div>
+      <div><a href="https://github.com/park-jeongchan/my-portpolio" target="_blank"><strong>GITLINK</strong></a></div>
     </div>
     <div class="prod">prod by 박정찬 @2022</div>
   </body>
