--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
   <h1><img src="knock.jpg" width="50" height="50">배움의 문을 여는,똑똑한 사람 박정찬 입니다.<img src="door2.jpg" width="50" height="50"></h1>
   <div id="menuBar">
-    <h2><a href="0.PROFILE.html">Profile</a></h2>
+    <h2><a href="index.html">Profile</a></h2>
     <h2><a href="1.LEARNING.html">Learning</a></h2>
     <h2><a href="2.PROJECT.html">Project</a></h2>
   </div>
@@ -151,7 +151,7 @@
     </div>
     <div id="pad">
       <div><strong>LINK</strong></div><br>
-      <div><img src="github.png" width="50" height="50"alt="이미지를 불러오지 못했습니다.">   github</div>
+      <div><a href="https://github.com/park-jeongchan/my-portpolio"target='_blank'><img src="github.png" width="50" height="50"alt="이미지를 불러오지 못했습니다.">   github</a></div>
       <div><a href="https://www.facebook.com/profile.php?id=100005045827353" target='_blank'><img src="facebook.png" width="50" height="50"alt="이미지를 불러오지 못했습니다.">   facebook</a></div>
       <div><a href="mailto:a01066592661@gmail.com" target='_blank'><img src="mail.png" width="50" height="50"alt="이미지를 불러오지 못했습니다.">   mail</a></div>
       <div><a href="https://open.kakao.com/o/ssY05Nme" target='_blank'><img src="kakako.png" width="50" height="50"alt="이미지를 불러오지 못했습니다.">   kakaotalk</a></div>
