--- a/1.LEARNING.html
+++ b/1.LEARNING.html
@@ -47,7 +47,7 @@
   <body>
     <h1><img src="knock.jpg" width="50" height="50" >배움의 문을 여는,똑똑한 사람 박정찬 입니다.<img src="door2.jpg" width="50" height="50"></h1>
     <div id="menuBar">
-      <h2><a href="0.PROFILE.html">Profile</a></h2>
+      <h2><a href="index.html">Profile</a></h2>
       <h2><a href="1.LEARNING.html">Learning</a></h2>
       <h2><a href="2.PROJECT.html">Project</a></h2>
     </div>
